# sdr-acars

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  deny.yml
src/: channel.rs  crc.rs  error.rs  frame.rs  json.rs  label.rs  label_parsers.rs  lib.rs  msk.rs  reassembly.rs  syndrom.rs
tests/: e2e_acarsdec_compat.rs  multichannel_synthetic.rs
tests/data/: README.md
tests/fixtures/: REGENERATE.md  acarsdec_test_wav_expected.txt
